--- a/materials/material_receive/css/style.css
+++ b/materials/material_receive/css/style.css
@@ -81,7 +81,7 @@ footer .copy {
     width: 900px;
     height: auto;
     justify-content: center;
-    padding: 0 50px;
+    padding: 50px 50px;
 }
 
 /* section - recent */
@@ -228,3 +228,4 @@ footer .copy {
 .productionbox {
     width: 500px;
 }
+
