--- a/materials/supplycompany/css/style.css
+++ b/materials/supplycompany/css/style.css
@@ -81,7 +81,7 @@ footer .copy {
     width: 900px;
     height: auto;
     justify-content: center;
-    padding: 0 50px;
+    padding: 50px 50px;
 }
 
 /* section - recent */
